fixed api structure
